@@ -491,6 +491,12 @@ If succeed, returns 1.
 
 Calls the L<read|SPVM::Sys::IO/"read"> method in the L<Sys::IO|SPVM::Sys::IO> class.
 
+=head2 syswrite
+
+  static method syswrite : int ($fd : int, $buf : string, $count : int = -1, $buf_offset : int = 0);
+
+Calls the L<write|SPVM::Sys::IO/"write"> method in the L<Sys::IO|SPVM::Sys::IO> class.
+
 =head1 Modules
 
 All modules included in this distribution. These classes have methods that directly correspond to Linux/Unix/Mac or Windows system call functions written in C. In addition, several helper methods are implemented.
