@@ -5,6 +5,7 @@
       + static method fstat : Sys::IO::Stat ($fd : int);
       + static method truncate : int ($fd : int, $legnth : long);
       + static method sysread : int ($fd : int, $buf : mutable string, $count : int, $buf_offset : int = 0);
+      + static method syswrite : int ($fd : int, $buf : string, $count : int = -1, $buf_offset : int = 0);
       
 0.486 2023-09-06
   [Bug Fix]
